# ChangeLog for media-gfx/argyllcms
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/argyllcms/ChangeLog,v 1.39 2015/03/30 17:24:54 voyageur Exp $

*argyllcms-1.6.3-r1 (30 Mar 2015)

  30 Mar 2015; Bernard Cafarelli <voyageur@gentoo.org>
  +argyllcms-1.6.3-r1.ebuild, +files/argyllcms-1.6.3-usb-db.patch:
  Fix obsolete /lib/udev/usb-db use, patch from Debian, fixes bug #544728. Also
  add some slot operator deps

  14 Aug 2014; Jeroen Roovers <jer@gentoo.org> argyllcms-1.6.3.ebuild:
  Stable for HPPA (bug #517804).

  13 Aug 2014; Jeroen Roovers <jer@gentoo.org> argyllcms-1.6.3.ebuild:
  Marked ~hppa (bug #517804).

*argyllcms-1.6.3 (28 Feb 2014)

  28 Feb 2014; Bernard Cafarelli <voyageur@gentoo.org> +argyllcms-1.6.3.ebuild:
  Version bump, mmostly bug fixes

*argyllcms-1.6.2 (06 Dec 2013)

  06 Dec 2013; Bernard Cafarelli <voyageur@gentoo.org>
  argyllcms-1.4.0-r1.ebuild, argyllcms-1.4.0-r2.ebuild, argyllcms-1.5.1.ebuild,
  +argyllcms-1.6.2.ebuild, metadata.xml:
  Add myself to maintainers, version bump and fix some bugs (#457876, #491656
  and maybe #485962)

*argyllcms-1.5.1 (13 Aug 2013)

  13 Aug 2013; Manuel Rüger <mrueg@gentoo.org> +argyllcms-1.5.1.ebuild:
  Version bump

  29 Dec 2012; Mike Gilbert <floppym@gentoo.org> argyllcms-1.4.0-r2.ebuild:
  Use makeopts_jobs for more robust MAKEOPTS parsing. Bug 449106 by jannis.

*argyllcms-1.4.0-r2 (14 Dec 2012)

  14 Dec 2012; Justin Lecher <jlec@gentoo.org> +argyllcms-1.4.0-r2.ebuild:
  Be verbose in build, #445522; Respect CFLAGS, CC, AR, RANLIB

  14 Dec 2012; Justin Lecher <jlec@gentoo.org> -argyllcms-1.4.0.ebuild,
  metadata.xml:
  Drop vulnerable version, #437652

  11 Dec 2012; Ian Stakenvicius <axs@gentoo.org> argyllcms-1.4.0.ebuild,
  argyllcms-1.4.0-r1.ebuild:
  use udev.eclass for rules installation (a cleaner virtualization of udev)

  11 Dec 2012; Ian Stakenvicius <axs@gentoo.org> argyllcms-1.4.0.ebuild,
  argyllcms-1.4.0-r1.ebuild: