@@ -8,30 +8,32 @@ DIST Argyll_V1.4.0_src.zip 15242860 SHA256 d33134704d2964db69f9e61eb73188632fe20
 DIST Argyll_V1.5.1_src.zip 9693168 SHA256 7c65055e577da5a3344b3949e52c3e66fe6339b8801bf4e0cda687e78f7808a7 SHA512 c21cd676edd6415a866fb2a7b122eac18e7596f265a0f2dc8d1f7ca761f64be9fd64ead1430e36eff8767672e73bd93de61398ff588e94a0e121d848afd8bb96 WHIRLPOOL d827297475755e75abd73d60a725cb3e29eb2afa341295d5e47ee9cbae8803863bf84d2fc11f56f9f98862c126bd3f4fa37060a629c0b24ac3081bd3b2d2c5b6
 DIST Argyll_V1.6.2_src.zip 10291838 SHA256 c21591d5615a584df438ecbfe7858fde571f6066e56da436c541d08ca899ac9f SHA512 98484eb7985482c132532c2aedb24afeb20576a6417c89718d58e5e35e36bd4feb270aa7ea8c86b31dc218c82d99de3500c47346c75159a79de9df57d2019fcd WHIRLPOOL fbc4b766bd45d47b33f56b8662c7681c251aabeeee0c978ff71f3079b83f9eeb8052725b77446035ce91589f11553283f84b43f24602e3b4127bc1b5f37672d3
 DIST Argyll_V1.6.3_src.zip 10338488 SHA256 188beaa03dd2459403415023f8f8f9aab362bf3062a9822b3622dde6902e4b84 SHA512 7c350c73492d7e2e27354814cfcb172bf1e4bb6ee8f3f71f2003a7d44ed4be9890a6c80d6a69228495645be11a327c0f7c2ab68d6f6621dd938744a1cd7ebe95 WHIRLPOOL a854ebcca1950f3e654ae85fff3189bae17c511c26e2f3dd8104d9b55ddb83022659276fae201899f51a2a27b00c1cf98f157261e50d0fd48f1a8044923e11c6
+DIST Argyll_V1.7.0_src.zip 13935712 SHA256 dac51cf5d8f6d04bb02f2f5b119fa0e8b773a010e6377116768b082ef018f663 SHA512 644683c8a73d36583d607b5d51c543dca8f1e3fb3db8138a164f9ed7f994df7739ee7d810b7136a7cf0eba7b54fe53b35ffbdd4e6915ec20b271325119ce369c WHIRLPOOL e08c6e311856716ee6b49e37c583d8d4275629fb746f018e0d7c768d4c907644dc60545ff2c709217988c668b198dfc95396af3fdf0ccd40d320514854b1c087
 EBUILD argyllcms-1.4.0-r1.ebuild 2123 SHA256 1cb7823ca2a5d099d6efd63913047bccdf135c786c780b62c45120a225d1b87c SHA512 9c490fa2f4b1021ec095b9079d82d6e33108b4b70530e2f16807e6599ce77befc0d9fd8c5d16cf9440ba8f0a54ff571dcec2a11d7555289cca50d9a9d6312290 WHIRLPOOL 99512c3c2d80f345df50c476c4d99a5c6c031a9cb23cd00042dfa2ec1da1c65fac97643bc241bc5aec2ed220ae00a9f2bd2334ab7821906366b8d20e8b16b8c7
 EBUILD argyllcms-1.4.0-r2.ebuild 2199 SHA256 3641eca5bd7533905b1c86a9144f7588252e34c62d7bb81fa6bdd00c8b2a9b5d SHA512 5bbe1a57deb0060717251a1e4131010f01e4f47095d187ef7c3a3537ce646dca89c5b40f964cdd2dca37b52a90ed261618889b56b9d7c32c1fb4c41bfd5ed668 WHIRLPOOL 25ed047a01bdc49c1b1912db407ca0ef3df6e7152391ac116291fdb34baceea2eef28c858fb7c71b38cabd711c53c638a206a3abd4e9e70685aabbafcad613c5
 EBUILD argyllcms-1.5.1.ebuild 2158 SHA256 dc2af219b521ea359b2930ad34a72770714844027735d9510693d3256faa5526 SHA512 fabb5dae71818194d0a30177d1968cfaa84078da19781df1cb9abfed402e965e05468220e108f7b06586207be1f77c41aa9b0cc42975d600b0288f65851bf410 WHIRLPOOL 983bf339fe5227d3d211bfb9102b8052171240f4fbb53d68032f83f4b806db2ed42686d7b1753705cbf7111ccf8c043e281f3b849d87ec9c17e76cfbacda39f6
 EBUILD argyllcms-1.6.2.ebuild 2108 SHA256 65961e58ccaeb576cbf8abaddb4c0a76cbae3a498904e29e261a2eb19b509713 SHA512 602e802dddd8d78e372e5bc0063712ff2aa52cb1ed5e5c7163b19d1a7a3282a83d2087baaa53f0ace8bf6dd7c9e168eb60b21d133e1fe985a88e2be50ed26f92 WHIRLPOOL 42a40a46b8643d82bb76b5d865cc252d08f2dfb65be86aecc5a12b46b1ddbb49ef907af9718d5ed539151e891ac3e688e3c99137a825a9b418bf2f34d878c57c
 EBUILD argyllcms-1.6.3-r1.ebuild 2154 SHA256 aa186b9f895ec4fbcd1eb4377d6324956427ad8ca0217753c1c91f8c6d123a3e SHA512 e35b66d7254c5fa95c20e663653db676289f5d2450e26842fae1dc54cfd43035a44169dbd543787f8e92aee731c726317c4f96ec2bce2baef3d3ace7c4153a5d WHIRLPOOL d23ae35a9484d5c71016f2120ae6f649861dcde00f949c79af7c68e3a15274ec9e072b186c501ba1c40851857fa7018fc08d37efab44c1bc8ae5e6377ebdef4a
 EBUILD argyllcms-1.6.3.ebuild 2108 SHA256 943abeb54ce330118f4b38d5aafd4c7fece218917d0d77add692f791954771fd SHA512 37acca5d3a6bfa26484807be45c23a346d6c2411ecd448cff9f111ed20b940e480c8deada76d1692f69769e934b204d5e3cf49935b25936c289c8f6a7c40e35e WHIRLPOOL 8416dae57e2c08407b9c4b2e28e77c5cb4dfa633e03c9510e41f8e1d77c9b597de82ceb6f90f71e1288dc80bcfa630f14ce48b282dc6044300d04786085e8cc1
-MISC ChangeLog 7226 SHA256 ddfaeff75da58a904ea02b12cdeadd5fe965dbc3bdea6bb7eb270606d76da3dc SHA512 905d8fd6d2be8260f30a82fa2378d53e4e48d84d9e6c8ef25b094c70c3fbf455160ecbc9ddf4ef15e4e0da0f72dd99d1c6b5930283dfbbb3622b88355e05a6b1 WHIRLPOOL 2fc1ea76efa164b3e0eb390e41e7480ef9ea49c5a9dbef602995139dcb208d99aeb416a4a668ae5dd9eab9bc48f87aaddd0a4389119e966ab4dbc409170406ed
+EBUILD argyllcms-1.7.0.ebuild 2118 SHA256 8fb022fad16df0c520038f9b823d118144251750c96dc8498df0cf62709ebdcf SHA512 c3dd5ad6d1d9ca038f7b7110a981179b96336e8eb243bae1944e78ce479e444f280d0d38f083768ff436893f14f776da9e18aef3aa66e67e035b48d5adc5d74a WHIRLPOOL 4877a7033f06ad9938cd9732b2220ff2bd0e4c15365b0c56ff1ea481f01187ebba9e54fdbce1e71f080f599b25cab3c1626d691f4c421c26d4c9d5a22558d1a0
+MISC ChangeLog 7367 SHA256 f1c31555d0abb29fbe5fd4de4613678503f70c96dd4b88285b138f40a9096a3d SHA512 71d4b83c83ea2cfa7b22d8c0279f0ab20297234302fbefe175d7ece4f352e9cf8c1c15c0fd6c73b5dbfc920451b5bc3131ebdfe725e299a9fde6802269c01578 WHIRLPOOL 168bd18956259166e384210501e6eef741c84528bc3c211ada7fd1125234f6e7cc8e004d0b930f1126015a71dc4e4a2ce4de912bda94f447894c9d0ae632cdf6
 MISC metadata.xml 238 SHA256 325bc955f2a5e5f2ed4b013fb6ec3ab8308fa98e84ce1c503f6a78bf42f3234e SHA512 14453949e63d402e99c24dfede43ebcac8bf3fc5c731114141bed639d0e0b0e71ffce033ab268595c155dee0b58e04e1bbe4023554f7fd54031c2f90f607cde4 WHIRLPOOL c31742cff7c49498de00d096d5dbeb0177bccbdea3f5713baab174d9e1ec782b781f8eb7c87e0e52aa4968c2f2601d1a914dfb6e5e2e59b9a1ca1615a0a9d172
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2.1
 
-iQJ8BAEBCABmBQJVGYbqXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVS3ypXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXREMzFDRDFGNEQwRTAyNjc2QzRDNjRFQzAw
-MEY3QUIzMzFCMEYwOTdGAAoJEAD3qzMbDwl/W7AQAJzgaMIqGcEC8nwFgkr5oJG1
-Q+K/7hCHItm4JRxFvP2yyZbsYkZ+qczsu0rF9dgOrF6rklI5jqhGLQTwYi9harZq
-XNVUByg0J/V8tbcgiA2XNcx5QpSjms+ZA/j2+qAHMBbU4mZxBbcIy8ycNlZv2lsf
-9yQ4B4Ar2uM9cLwDZpNKU7YGJlIRdvX/Uwk8aBpS2L0LRWXcDBxHs/IBsiHzAfpM
-e2PFNqkfsK6hkdXr/GcrNVCil6baUkkt3Rg1NL+jK8Kn7TzvBT+0gEjwnpNGZSr8
-ViyQNRK+ZG2akuSialD0YQgJcpg5OXB6BDaon3CA2wYfmMzT4EfCgrMr297i1GB6
-+dEK/N0eG/aPNErrqxA8UDCa0bReT4mqeBKY8PWC4X12hQbWWtAynTdTaPOYAy9w
-Jle0NMUEkv05qzJbibK7bOIe3yV7ktNYwskEt2+gq5bJKnjIKKUNXjNrDv3swANw
-1NL2zwWC7V7hRgL3ZW7gMgVmvVuir/Iv2EE8ntpHp972q4WGrY66LsFs3rag74ph
-e4/+u7/vRh8SAgs1AQl/6uYiX+PrnV5LUyHFBXVTCx2K6JgaMvfa17HnxSCdpK4E
-OAwZOhH5CaHxtoAzKiN5im3YxM0x7FwHT7t1/uRPDsKc2M5DgEkZ0IIqc4nw9DvD
-ePU1C8JwjhATz2dHX4Hd
-=JmmG
+MEY3QUIzMzFCMEYwOTdGAAoJEAD3qzMbDwl/djYQALW+x0Z46RErnE5lbVWCZ4et
+35rOe+sn/IkjcYAr1HIx7/g1KpUXy9jBo7lGzbNKW6EVp5blBQ6XsOaGD7IYs9bD
+WAI0CB9hkOkpcuNTg6dt1rmCnvD7kL3m4DUuoMhnXyFTIoW7T0X0S2YWZG+TmGNH
+ERqtQe3884tXQ9/4BPOXe/WhU93TWyNImw8WcqAESKLv/shp6HPLwYyAkEMMdjqH
+1d/X20drAD4+djccIYejpfShTXGVca6BmfOxiKt2qK9nNxuYb1950ZMosz4gqoF8
+v7rDVynRFQwP6A5z0oRwxiS21bgi/c1tG70PYDIqcbSyS7J63WSLy9uo/oFCUaKE
++zjfIrJKw5EYDyDl/LqpcAl+QVMBmAtarESuGO4estks8NKVRc2SYeQopXG34jP6
+kMF4QCa+XfBk0e3hLr+QuibQtlD4AwN8tBQPlEZPSKE9HDu8xFB7yVF4CJiRGJCE
+wOwi3s5bYw3epE+kVXBQKYn1LqV+oiLETK9t7LbAVq5lonvcmNsihrYThjvL0R9n
+lUdLhH+9UXc0cuQpQXjp3nVuT4NLJfwCXS4wv4VXzAlqeScJcDxwWdKYxsMo/f1Z
+JKmyfUWnHVIlQjXtGUpII5BDBBox4+BeRFmgyPbgyVE9xhsvQ0wf2dzNY9YuAn4M
+yJY0tnsd9gI6/Xtv2Xng
+=ozlk
 -----END PGP SIGNATURE-----
