@@ -2,10 +2,10 @@ DEFINED_PHASES=prepare
 DEPEND=>=dev-libs/jansson-2.0.0
 DESCRIPTION=C implementation of getblocktemplate (BIP 22)
 EAPI=5
-HOMEPAGE=https://gitorious.org/bitcoin/libblkmaker
+HOMEPAGE=https://github.com/bitcoin/libblkmaker
 KEYWORDS=~amd64 ~arm ~mips ~ppc ~ppc64 ~x86
 LICENSE=MIT
 RDEPEND=>=dev-libs/jansson-2.0.0 !<net-misc/bfgminer-3.0.3
 SLOT=0
-SRC_URI=https://gitorious.org/bitcoin/libblkmaker/archive/v0.4.2.tar.gz -> libblkmaker-0.4.2.tgz
-_md5_=2f672ca4bf73bc98975051f2221b3b00
+SRC_URI=https://github.com/bitcoin/libblkmaker/archive/v0.4.2.tar.gz -> libblkmaker-0.4.2-github.tgz
+_md5_=d053c8201be894664b4bb40601f9d489
