@@ -2,10 +2,10 @@ DEFINED_PHASES=prepare
 DEPEND=>=dev-libs/jansson-2.0.0 dev-libs/libbase58
 DESCRIPTION=C implementation of getblocktemplate (BIP 22)
 EAPI=5
-HOMEPAGE=https://gitorious.org/bitcoin/libblkmaker
+HOMEPAGE=https://github.com/bitcoin/libblkmaker
 KEYWORDS=~amd64 ~arm ~mips ~ppc ~ppc64 ~x86
 LICENSE=MIT
 RDEPEND=>=dev-libs/jansson-2.0.0 dev-libs/libbase58 !<net-misc/bfgminer-3.0.3
 SLOT=0/7
-SRC_URI=https://gitorious.org/bitcoin/libblkmaker/archive/v0.5.1.tar.gz -> libblkmaker-0.5.1.tgz
-_md5_=bd7ccd128b777fcb5cdd650b7c0e35f3
+SRC_URI=https://github.com/bitcoin/libblkmaker/archive/v0.5.1.tar.gz -> libblkmaker-0.5.1-github.tgz
+_md5_=0fb0dac17573b5f43514443094cc7b71
