@@ -2,29 +2,29 @@
 Hash: SHA256
 
 DIST libblkmaker-0.3.2.tgz 17893 SHA256 161dc59400eaaff210a0910b7b4c4feadad3b151422ec2ffc927ef183f8cf661 SHA512 e45c50c11676995171f6fb27346a42843a2c035c391ab84b5e565f5fff109a4ced6cdafb6c662572eb7243b25d2014400e9516cdbbd0d65f4ea31da7d0e74bdf WHIRLPOOL d1704692e844e59a5dac5760c96ab2b5d5c1df2bac6ac3e448e918ec88630cd281ef489e36d7559801608537ee9e761eb687b48c01dc5d31439dc533fedb3af7
-DIST libblkmaker-0.4.2.tgz 13713 SHA256 c42d5bb66335c6070b677e623d082e034578fd0133b91d210bf9626c5e257c9a SHA512 399ae4f45fa38f4caeeb32f4d9c4bdfc3734ab97f3d422477d88797d1e2bcf97fec3591a2e73e027680889baf09a02998817794463466ffd37493b1c367ce4fe WHIRLPOOL bce06013c3a74d0e487c824170451c85356127a79767a6ff7e71d2bbd742e9d5a14f23b5da6c300494c98fa0f7bbc261d40c1163677acfd4ec4d6435b4b0a093
-DIST libblkmaker-0.5.0.tgz 13574 SHA256 2a67894c9a06b728de32f8040a5b9c3d3826e4d40c685e6522429d2f272deda8 SHA512 3e9afd68a3629f04cf5e8c1497307e3d184b363c4c47841f7a173b0e5834e15d586aaac13322ddcef6e96f6e55acbb0116f071993013d40737b0af52b00f137f WHIRLPOOL 2ca06d9f2dfd0b71943f239b89697e192934f582fc85613747982ba268f0bbe9292b8fc8033203d1b9526f2f2d10b91691681c6c48abf154c5200108992c8606
-DIST libblkmaker-0.5.1.tgz 13659 SHA256 f5f58b1ebebd31a2ad93acaea6d98102adb090945b7caa5582a134b6de6e706f SHA512 2d6fde9cbaf6d8d2727d223af6939e338b1ee11b9d662981493246bbe696e8f57db848117a814cb6a13eaefd3ac09a776f3ca8e8bc87fb232cd4660d2066720a WHIRLPOOL 42e28ba891e42226903b9b54f817865318f5e9057997923c4e89a0434f36b49daa99c3572d8cde9fcd9f42f75285a9a65a411e8ad8bd8a9e53f6f211d954fdd3
+DIST libblkmaker-0.4.2-github.tgz 13708 SHA256 3eb6f855efb56cd87e8c2e8b52089337379c15cd33d4049c8090b39d92d5453e SHA512 b5ac42ed1be14b10a93828c3c34f1d176d9128a8cb263bda1a55cd5c9d7157f8b501a3943ee60705f572aae7bec7098a9353032499457dbbec80c105796a95cf WHIRLPOOL a84111c6d38443269cdc627663d228871be0d5435ad28cafb3b74596f85c57f1700e5e54d60dd8a875534d4eda8fd14dc483b6aa5e3619e9d0df8b2ec3a7aea5
+DIST libblkmaker-0.5.0-github.tgz 13577 SHA256 06cf13c3de8f191ce16f40b2f2af940826d92bf2b25544b3b1bc8648b04f0a42 SHA512 64f90a652485f8c192a0d1e6184e44a0d4372907954f0abd855973099436f87a1c02a0ee383b86b22825427c7df5f46b06a9be9c55747942281cd6fc0e1aa33a WHIRLPOOL 992f9d3d5a2fe6e95f4198df97c32fc43007b336a962c13f04f8a751794e2c70bd6be05706324f6e79bfb30c598aa46b20f9b25187d93acfab398ba158a474d3
+DIST libblkmaker-0.5.1-github.tgz 13655 SHA256 f9d1ccdc2931ed7fe8248b2541e0e0cbf85da3434e2adf41e1ddeffdcec185bd SHA512 45dd0638b3d1188131d9104a86230f87910fcde225198f4d23cc69f31fc1a86077d83a89780a9ddf686dd286bcbfcb59e1a94f4dfe4e6397236a76bef50f9b14 WHIRLPOOL 5e62a57f2726ac5389c36e5072ba0fd778294eb1dadd517172b91e270a16a8c3edbc4b92c3ff6fb9a8bd8e2280face5ed1f09d216eeaf5d098ec06f6e56c4676
 EBUILD libblkmaker-0.3.2.ebuild 670 SHA256 c83a9ddec8945c60476a79f83764ca2da58905edd27d99b2ecf631db6567e485 SHA512 b6ee6c6d5d83d785cab2427fb8998b074fb4cf5064d620ef31ecfed080e5aa096c47783d73e16027fabb291b222d111503fae7a60b60252989ceead10e183717 WHIRLPOOL 1e2953fe79ae6caf2142065a9190ab0bf12cbea26e6b12b555a77fdbb40fb9297b7eda9f92692b85243af87d3c814342e3faf93186c6965d37fda8d7ad4bfea3
-EBUILD libblkmaker-0.4.2.ebuild 672 SHA256 87704233f667c51ef29210b7480ae2503bffc4c6723791afe52c5836b75de7a8 SHA512 c7b827121c3381664f8616363f4404656d8ab55e67a99b5df9c97d251048e7a250834868b9b2311cb5eca22ef4d119c03d4acc6b4b7b934e6aaeac9a9ca87685 WHIRLPOOL b3d275e023f7cb19b373c8923085490bc7eee707b3c353489c67e84e8d0264c9af9bb263ae0470107f758797a1b395ac1ef240826d7c868168a2aa3c3da39f43
-EBUILD libblkmaker-0.5.0.ebuild 694 SHA256 c3ff158fee1946c07add858dde2c8fed0ae7cc5f190e8d94e76faa98830cecea SHA512 8d148a2a68bbfcbf1a970a97e673caea95ef114420bb05cc8d0f3f0d437afb77efd1d7958eeb648a4b8fcd70dffd920950ad0495fb08086ca1a6002d289fe63f WHIRLPOOL 0e88c8b9e1e9e84111de3acaef222d78ef5ab4499bb462bbd3892adc7d98a43773a7ece38cc89faeb44551a3f56010beea7b5c81d86d1847bcaf04fb81bf1eee
-EBUILD libblkmaker-0.5.1.ebuild 694 SHA256 e267f4bf5f71d3bd3fa0b0ff3c581e8652ddf8e7bc850f561b1abc1da5223315 SHA512 d1695d6206c19fd520ba6ef802efed0f2f94bbbeed23643176732e1f09107a2732b59be82bc764bd7f6cf8db5cbdbe00679484cd7b8c242a1075cd3fee633ad3 WHIRLPOOL 6f9edcaf23e4b70866193ab21eb500e6e6b869bff582eed72dde65dc00f91fc8362b9e0a273e2fc710b46425481a7af9a432d83b5812dd5af503c03d2c8f9134
-MISC ChangeLog 1881 SHA256 6bac99e61c2e74d869299a1ac4862f3851d990b3d046d89588ec4af20d1cda9b SHA512 a9c69b636adfebd4ad08a05b7ae15d476eeceabcdea5719039160b1a0d070f6858b8bf973b507d5800759de7d3eb8f7e5a350c5df2ffe7f88a52486345da9d51 WHIRLPOOL b205b9a4a2a3bae3840c0aae2740161c62ca0aa70698ba20e3167c96776426cbe187814a33556fcb460f4442fe89fd035a62aec420791fb397ec9d10a6af259d
+EBUILD libblkmaker-0.4.2.ebuild 695 SHA256 8cae50da36eb59587011f2d7b23dbb89c3fe524b44861debe080424c45dbce6e SHA512 4a569df6765a7f8008f6b34f151f979e7fff49e239e953f97c0913454a07462765769f4d51b30329787f4ff7e2aa6d3bf992a4d15025e6c08282b3e51cb1f1b1 WHIRLPOOL b2f97bb46e51ca3a9bd7bead73e2a06fe70af56113bf7b14610a4a103b8fd88c080a9ca62dd3f3eda8291e6d25615cc635f3227f96fea3b8366ae77e942030e8
+EBUILD libblkmaker-0.5.0.ebuild 664 SHA256 1c4dd5b2f653a8e698d3e55403757cdf90fb15293e953e7aa07aada58a6c4ab6 SHA512 1f35ba752602c30ac8a7796085d533f77324f94d9d66b4ceff5060af62b0501cbcc5563bc2a6d4ec068c3adf3b521af28b644668845124d5668a9ec43d379599 WHIRLPOOL 4649f8c6486c235dcea7930bcf514a3b295bd3bf4cca23c63734a12058ae2675fcaaf40913416c5537df83eda1d0ca08e6ef1b337614e375f0133f1f29216aa4
+EBUILD libblkmaker-0.5.1.ebuild 664 SHA256 bdf74941e0a78e411fd13f73856dbd92bc57a385baaca47fb961ec3cdb31e8e7 SHA512 70632c2a247d343f3e8c2f3a48ef6bb4b7b5e1b84c584337e6f017716edd13b0873dd960a2afe0d56c8c45739b620ac0206c7e1c6a07973428750f8b35928862 WHIRLPOOL a91a39e3f979cf5589b09e59e451961080db667fc8eaa0eb2d62a46f47d17b3c3cd5e53a38870a397ce7b7b845000728fcaf7e35e38b6e62c8609b9d7a877b9a
+MISC ChangeLog 2066 SHA256 7a7e42cbcb53273aa4f40774c8da3ffed11c339eea016585d4408109e3bbd298 SHA512 d2f8d59603e0cba02b72b3effb93b5105cdf3e7ccb402416c39413984ff02a334082d63acdf646b6cc88048e003a895e2eb29d84399336c68577dbff460d7098 WHIRLPOOL 970c719cf92fbf0d433b8b650e554f4e9195688e6fa98151977203194ae3344807718d6ef60add5abda2b99d1bca1b3c0d15f539bb23a2b4b432c9534efdda18
 MISC metadata.xml 374 SHA256 5098edf30adee84f59968d5b6c45adcfa410a32001905dea9c093a5ce74a44b3 SHA512 4315e762ca8061694dd652ddcd1a9f9f4b51a06126207c644a52557fb977b94eda2bea826f326763f99cd7da5e813fd07251d039bece31fc13f8686d7113cea2 WHIRLPOOL a629000079acf2866848adb5f66496970dc515badbd9e624437ea89d06d7a7f106ac50a22eeefaac28012667f86d5938c8e4ebba3df837c70763b93e3e239b6e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU5lNdAAoJEJOE+m71LUu61xkQAIEaHaL6JpRTdcl/BaNjPm7p
-EHd2c77DjlOSsTiu79TXWHT86UMk6exGpZXqQR0I1dfnLt71m5TZXENj024GV79R
-9Frxlks65JP+ZKu+DX1bFlk45EtNdNCOetTKUGiCvD7jH1RWVf7q1DgP8EKSBGk0
-0pF4Pu5lTKgj9g3OemyygmUUQshi5OblJe6+up9fC5OGjYjBQtQ55TKk7f2y3qpy
-2vjTV3CJza2LOYkZhN+OzikkKnOIG0IAi5wgDzJ6YveJG3dw5hCrmxfwix3p5VuU
-1Sb7iBNH1LVVSJx2wualkfbXkfvGKdT1OVH1ueCYajerDDaTRwaRbPNiZ4SvhxXy
-o8+O6thXTc2EkaoPmnlnokMJSQ/BYCWyx7fp671LuQXd1fXGq6o4HTj0JF2avDu2
-y8tgh2Q4uRJ2L66zr06VDEZw+KFrb+TI7upGXk1t/ek/QK9I+ok1LE359rRERclm
-71T4ucXCGhviUmd0LPt8ozMbxjYFukD1LkeLiihQAhRpvlkhx6SPunmHdZqJfIDf
-cpMHX8ZmcUoFhE5Zs1UZ5LC3dHuuz5vrIsteMRxqqZ4idv3AVN2IOAl7qEQpXDQi
-jV7570C0zJ8JUp+411UpjEiK6n1H+KqBmTNG/HFHrEQ2Lgsh1+5W8BZodDYd3BU5
-X6HigwFXc6Sb4juiBZpV
-=+UYA
+iQIcBAEBCAAGBQJVS31UAAoJEJOE+m71LUu6S+cP/3ytdw6B4Wl3ix0z67RXt6ce
+lrtKK69BNxjsv3+3oMcpkOPH2CSRKNiTKhKn9cNJYPKYDwohCRwzzgiQNWmoiTBA
+/R+XWm7T8T0atAs+tHoBCm7ilQY0K9oa1tv4VooyVj7nLKjrC23ypXObFoPqOcd+
++sRcmqmWPVg7jbnZiM4go70L5Yok/uoyeCrF4AhqgpDaNW29FjRhBuvONViIzrjl
+WVai56FQLy1lP0nyfTsqW96srHx+uENum8jVklvF2SZDA4XCCeQPsUDaCgpnQZeM
+yKBM5162d5UDnNnrC4V/zB/7D2UFO1qSNWwmserCHIYmeogTkm2HNo9NaqJFRCiZ
+KnaD5G5gVuCXAIxC0h4Z1lQ0EI7bZrV5J0oE+3KX5ZiP9yJbsWhWiO7CjaQOAy+P
+w8pLHxWV/v/vqp26QM0DBTi5A19Gc3IIm8LWgyv6LYZk48I/YOSP2X15keGLpLQf
+JiY1ew4MMQVnLMwCHhAqqndaIwAHg01TPBjy/Ae/VE438S/4DomD8O76RZIPtLYp
+xyUP3kkeAlQW/IA3Im9YjQco8GTjc+pofoCvZVfPVFJ2tVjEElR2aFyez//hVdzg
+K6HKeaJTW8ZKAJZbudsURH5F5ERCJ5+obdzAPnPlt/ANlhgS1/gri4PNigFiyMaH
+DgT7gipM0n9v8s+A8FrE
+=Rexm
 -----END PGP SIGNATURE-----
