@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/libblkmaker
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libblkmaker/ChangeLog,v 1.13 2015/02/19 21:10:55 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libblkmaker/ChangeLog,v 1.14 2015/05/07 14:57:13 blueness Exp $
+
+  07 May 2015; Anthony G. Basile <blueness@gentoo.org> libblkmaker-0.4.2.ebuild,
+  libblkmaker-0.5.0.ebuild, libblkmaker-0.5.1.ebuild:
+  Swtich from gitorious to github.  Bug #544858.
 
 *libblkmaker-0.5.1 (19 Feb 2015)
 *libblkmaker-0.4.2 (19 Feb 2015)
