@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/argyllcms
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/argyllcms/ChangeLog,v 1.39 2015/03/30 17:24:54 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/argyllcms/ChangeLog,v 1.40 2015/05/07 14:54:32 voyageur Exp $
+
+*argyllcms-1.7.0 (07 May 2015)
+
+  07 May 2015; Bernard Cafarelli <voyageur@gentoo.org> +argyllcms-1.7.0.ebuild:
+  Version bump, bug #548758
 
 *argyllcms-1.6.3-r1 (30 Mar 2015)
 
